# load-forecaster

./: .gitignore  Dockerfile  README.md  build_docker_image.sh  entrypoint_handler.py  get_prediction.py  inference_handler.py  push.sh  pyproject.toml  requirements.txt  serve.py  train.py  train_model.py  wsgi.py
pipeline/: etl.py  model.py  optimize.py
run_local/: deploy.sh  get_prediction.sh  predict.py  sagemaker_deploy.py  sagemaker_train.py  train.sh
utils/: utils.py
