[tool.poetry]
name = "load-forecaster"
version = "0.1.0"
description = "A simple ML model API to predict electricity load."
authors = ["Mark Barna <->"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "~1.18"
pandas = "^1.2.0"
pyarrow = "^2.0.0"
statsmodels = "^0.12.1"
matplotlib = "^3.3.3"
joblib = "^1.0.0"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
