[tool.poetry]
name = "load-forecaster"
version = "0.1.0"
description = "A simple ML model API to predict electricity load."
authors = ["Mark Barna <->"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "~1.18"
pandas = "^1.2.0"
pyarrow = "^2.0.0"
statsmodels = "^0.12.1"
matplotlib = "^3.3.3"
joblib = "^1.0.0"
seaborn = "^0.11.1"
sagemaker-training = "^3.7.2"
sagemaker = {extras = ["local"], version = "^2.23.4"}
sagemaker_inference = "^1.5.3"
model-archiver = "^1.0.3"
multi-model-server = "^1.1.2"
flask = "^1.1.2"
gunicorn = "^20.0.4"
optuna = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
